src/test/ui/parser/issue-14303-enum.rs
// compile-flags: -Z parse-only

enum X<'a, T, 'b> {
//~^ ERROR lifetime parameters must be declared prior to type parameters
    A(&'a T)
}
